# online-poll-system-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AI_TESTING_GUIDE.md  ARCHITECTURE.md  AUTHENTICATION.md  CONTRIBUTING.md  Dockerfile  Dockerfile.render  README.md  cmd.txt  docker-compose.yml  main.py  pyproject.toml  pytest.ini  render.yaml  schema.yaml  schema.yml  summary_of_protections.md  supervisord.conf
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/ai/: models.py  schema.py  serializers.py  services.py  urls.py  views.py
apps/ai/migrations/: 0001_initial.py  0002_enable_vector_extension.py
apps/analytics/: models.py  schema.py  services.py  tests.py
apps/analytics/management/commands/: seed_analytics.py
apps/core/: __init__.py  authentication.py  authentication_extensions.py  fields.py  models.py  urls.py
apps/core/migrations/: 0001_update_site_domain.py
apps/distribution/: models.py  schema.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/distribution/migrations/: 0001_initial.py
apps/polls/: models.py  schema.py  serializers.py  tasks.py  urls.py  views.py
apps/polls/migrations/: 0001_initial.py  0002_alter_vote_unique_together.py  0003_poll_slug.py  0004_populate_poll_slugs.py  0005_alter_poll_slug.py  0006_pollview.py  0007_option_slug_question_slug.py  0008_vote_slug.py  0009_populate_slugs.py  0010_enforce_slug_constraints.py
apps/polls/tests/: test_pagination.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/management/commands/: createsuperuser_if_none.py
apps/users/migrations/: 0001_initial.py
config/: celery.py  schema.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
docs/: distribution_graphql_tests.md  postman_collection.json  presentation_deck.md
erd/: ai.md  analytics.md  core.md  distribution.md  full-system.md  polls_erd.html  polls_erd.md  system.md
scripts/: check_debug.py  check_safety.py  generate_jwt_key.py
templates/distribution/: public_poll.html
tests/: conftest.py
tests/ai/: __init__.py  test_models.py  test_rag_service.py  test_schema.py
tests/analytics/: test_services.py
tests/core/: test_auth.py  test_authentication.py
tests/distribution/: test_services.py  test_tasks.py  test_views.py
tests/graphql/: test_schema.py
tests/integration/: test_workflows.py
tests/performance/: locustfile.py
tests/polls/: test_api.py  test_pagination.py  test_tasks.py  test_voting.py
tests/users/: test_managers.py
