[project]
name = "online-poll-system-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django>=5.2.10",
    "django-allauth>=65.14.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.0.1",
    "psycopg[binary]>=3.3.2",
    "pyjwt[crypto]>=2.11.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "strawberry-graphql>=0.291.0",
    "strawberry-graphql-django>=0.75.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "factory-boy>=3.3.3",
    "pre-commit>=4.5.1",
    "pytest-django>=4.11.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "U", "N", "S", "B", "A", "C4", "T20"]
ignore = [
    "S101", # Allow assert for pytest
    "S104", # Allow 0.0.0.0 for Docker local dev
    "S105", # Ignore false positive hardcoded password for settings strings
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--nomigrations --reuse-db"
